fixed css on mobile and updated animations

--- a/src/stylesheets/animations.scss
+++ b/src/stylesheets/animations.scss
@@ -23,9 +23,7 @@ $colour-primary: #0088a9;
 .contact-icon {
 	width: 5vh;
 	fill: white;
-	cursor: pointer;
 	margin: 2vh 3vh;
-	opacity: 0;
 	transition: all 0.1s ease;
 }
 
